fixed issue wth vpn (maybe) and added launcher script on root folder